# freemesh-rl-repro

./: .gitignore  README.md  pyproject.toml
configs/: gpu_level3.yaml  local_smoke.yaml  local_smoke_100k.yaml
data/smoke/: manifest.json
data/smoke/cases/: smoke_0000_simple_convex.json  smoke_0001_l_shape.json  smoke_0002_u_shape.json  smoke_0003_c_shape.json  smoke_0004_strong_concavity.json  smoke_0005_narrow_channel.json  smoke_0006_multiscale.json  smoke_0007_noisy.json  smoke_0008_near_degenerate.json  smoke_0009_simple_convex.json  smoke_0010_l_shape.json  smoke_0011_u_shape.json  smoke_0012_c_shape.json  smoke_0013_strong_concavity.json  smoke_0014_narrow_channel.json  smoke_0015_multiscale.json  smoke_0016_noisy.json  smoke_0017_near_degenerate.json  smoke_0018_simple_convex.json  smoke_0019_l_shape.json  smoke_0020_u_shape.json  smoke_0021_c_shape.json  smoke_0022_strong_concavity.json  smoke_0023_narrow_channel.json  smoke_0024_multiscale.json  smoke_0025_noisy.json  smoke_0026_near_degenerate.json  (+3 more)
docs/: data-generation.md  gate-review.md  gpu-feasibility.md  gpu-runbook.md  metrics.md  notes.md  paper-validation-matrix.md  reproduction-scope.md
examples/: baseline_smoke_summary.json  demo_report.md
results/: local_smoke_training.md  local_smoke_training_10k.json  paper_domains_summary.md
scripts/: run_gpu_training.sh  run_local_smoke.sh  setup_local.sh
src/freemesh_rl/: __init__.py  baseline.py  data.py  env.py  geometry.py  metrics.py  rl.py  visualization.py
tests/: test_data_baseline.py  test_env.py  test_geometry_metrics.py
(+5 files in other folders)
